tutorials/spmia/k8s/authenticationservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: authenticationservice
  labels:
    project: spmia
    app: authenticationservice
spec:
  selector:
    project: spmia
    app: authenticationservice
  type: NodePort
  ports:
    - port: 8901
      targetPort: 8901
      nodePort: 30000
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: authenticationservice
  labels:
    project: spmia
    app: authenticationservice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        project: spmia
        app: authenticationservice
    spec:
      restartPolicy: Always
      containers:
        - name: authenticationservice
          image: johncarnell/tmx-authentication-service:cb1
          imagePullPolicy: Never
          ports:
            - containerPort: 8901
#          resources:
#            requests:
#              memory: 400Mi
#            limits:
#              memory: 1Gi
