tutorials/spmia/k8s/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  labels:
    project: spmia
    app: database
spec:
  selector:
    project: spmia
    app: database
  type: NodePort
  ports:
    - name: postgres
      # The port inside the POD
      targetPort: 5432
      # The port accessible by other services inside the cluster
      port: 5432
      # The port accessible at $(minikube ip) for types NodePort and Loadbalancer; must be in the range of 30000-32767
      nodePort: 30002
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: database
  labels:
    project: spmia
    app: database
spec:
  replicas: 1
  template:
    metadata:
      labels:
        project: spmia
        app: database
    spec:
      restartPolicy: Always
      containers:
        - name: database
          image: postgres:10
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
