tutorials/spmia/k8s/kafkaserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafkaserver
  labels:
    project: spmia
    app: kafkaserver
spec:
  selector:
    project: spmia
    app: kafkaserver
  type: NodePort
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
      nodePort: 30004
    - name: "9092"
      port: 9092
      targetPort: 9092
      nodePort: 30005
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafkaserver
  labels:
    project: spmia
    app: kafkaserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        project: spmia
        app: kafkaserver
    spec:
      restartPolicy: Always
      containers:
        - name: kafkaserver
          image: spotify/kafka:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
            - containerPort: 9092
