tutorials/spmia/k8s/licensingservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: licensingservice
  labels:
    project: spmia
    app: licensingservice
spec:
  selector:
    project: spmia
    app: licensingservice
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30006
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: licensingservice
  labels:
    project: spmia
    app: licensingservice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        project: spmia
        app: licensingservice
    spec:
      restartPolicy: Always
      containers:
        - name: licensingservice
          image: johncarnell/tmx-licensing-service:cb1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
