tutorials/spmia/k8s/zuulserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: zuulserver
  labels:
    project: spmia
    app: zuulserver
spec:
  selector:
    project: spmia
    app: zuulserver
  type: NodePort
  ports:
    - port: 5555
      targetPort: 5555
      nodePort: 30008
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zuulserver
  labels:
    project: spmia
    app: zuulserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        project: spmia
        app: zuulserver
    spec:
      restartPolicy: Always
      containers:
        - name: zuulserver
          image: johncarnell/tmx-zuulsvr:cb1
          imagePullPolicy: Never
          ports:
            - containerPort: 5555
